force-app/main/default/objects/User/fields/Business_Hour_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour_Id__c</fullName>
    <label>Business Hour Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>