force-app/main/default/objects/User/fields/idAM_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>idAM_Approved_By__c</fullName>
    <label>idAM Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>