force-app/main/default/objects/User/fields/idAM_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>idAM_Ticket_Number__c</fullName>
    <label>idAM Ticket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>