force-app/main/default/objects/User/fields/Is_ORM_User__c.field-meta.xml
<CustomField>
    <fullName>Is_ORM_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ORM User?</label>
    <type>Checkbox</type>
</CustomField>