force-app/main/default/objects/User/fields/Is_Recategorise_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Recategorise_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recategorise Approver?</label>
    <type>Checkbox</type>
</CustomField>