force-app/main/default/objects/User/fields/LOC__c.field-meta.xml
<CustomField>
    <fullName>LOC__c</fullName>
    <label>LOC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>