force-app/main/default/objects/User/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Used for reports</description>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, IF(ISBLANK(Manager.FirstName), Manager.LastName, Manager.FirstName &amp; &apos; &apos; &amp; Manager.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>