force-app/main/default/objects/User/fields/managerGroupId__c.field-meta.xml
<CustomField>
    <fullName>managerGroupId__c</fullName>
    <label>managerGroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>