force-app/main/default/objects/User/fields/Old_Email__c.field-meta.xml
<CustomField>
    <fullName>Old_Email__c</fullName>
    <description>Used to refer the previous value of user&apos;s email in UserChangeEventTrigger when user has verified the email change</description>
    <label>Old Email</label>
    <type>Email</type>
</CustomField>