force-app/main/default/objects/User/fields/Omnichannel_Status__c.field-meta.xml
<CustomField>
    <fullName>Omnichannel_Status__c</fullName>
    <label>Omnichannel Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>