force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Email Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRT</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>ABHFL_CS_Team</fullName>
                <label>ABHFL CS Team</label>
            </value>
            <value>
                <fullName>ABHFL_Grievance_Team</fullName>
                <label>ABHFL Grievance Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>