force-app/main/default/objects/User/validationRules/Restrict_user_activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_user_activation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( $Profile.Name =&apos;ABFSSL_Support_Profile&apos;,OR(Profile.Name =&apos;***System Admin&apos;,Profile.Name =&apos;System Administrator&apos;,Profile.Name =&apos;ABHFL RPA Base Profile&apos;)   ,ISCHANGED( IsActive ) ) , true, false)</errorConditionFormula>
    <errorMessage>User don&apos;t have permission to deactivate/activate admin and RPA Base user</errorMessage>
</ValidationRule>