force-app/main/default/objects/User/validationRules/Restrict_User_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),$Profile.Name  = &quot;RNWL Base Profile&quot;  || $Profile.Name  = &quot;RNWL Manager Profile&quot;)</errorConditionFormula>
    <errorMessage>You’re not authorized to create new users. Please reach out to your admin</errorMessage>
</ValidationRule>