force-app/main/default/objects/User/validationRules/Restrict_User_Record_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_Record_Updation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISNEW()) &amp;&amp; $Permission.Restrict_User_Updation &amp;&amp; ( Profile.Name  &lt;&gt; &apos;System Administrator&apos;  &amp;&amp; Profile.Name &lt;&gt; &apos;Salesforce API Only System Integrations&apos;) ,true,false)</errorConditionFormula>
    <errorMessage>You&apos;re not allowed to modify User record.</errorMessage>
</ValidationRule>