force-app/main/default/objects/User/listViews/ABFL_Users.listView-meta.xml
<ListView>
    <fullName>ABFL_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>ABFL</value>
    </filters>
    <label>ABFL Users</label>
</ListView>