force-app/main/default/objects/User/listViews/ABHFL_Users_with_Manager.listView-meta.xml
<ListView>
    <fullName>ABHFL_Users_with_Manager</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>ABHFL Users with Manager</label>
</ListView>