force-app/main/default/objects/User/listViews/Knowledge_user.listView-meta.xml
<ListView>
    <fullName>Knowledge_user</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KNOWLEDGE_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Knowledge user</label>
</ListView>