force-app/main/default/objects/User/listViews/Payments_User.listView-meta.xml
<ListView>
    <fullName>Payments_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Payments</value>
    </filters>
    <label>Payments User</label>
</ListView>